--- a/src/app/home/homepage/home.component.html
+++ b/src/app/home/homepage/home.component.html
@@ -24,7 +24,7 @@
   <div class="card">
   <h1>Somos tu soporte</h1>
   <h1>Cuando más  lo necesites!!</h1>
-  <p>Tenemos como objetivo brindar primeros auxilios psicológicos, a personas con dificultades emocionales, causadas por el aislamiento social en el contexto de la pandemia.</p>
+  <p>Tenemos como objetivo brindar primeros auxilios psicológicos, a personas con dificultades emocionales.</p>
   <button (click)="cerrar()">Registrate aqui!</button>
   
   </div>
