--- a/src/app/home/login/loginpsi.component.html
+++ b/src/app/home/login/loginpsi.component.html
@@ -47,7 +47,7 @@
         <i id="show"  (click)="changeicon()"  [class]="show_eye ? 'fas fa-eye-slash' : 'far fa-eye'"></i>
      
     </div>
-    <label class="registrar">No tienes cuenta?  <a [routerLink]="['/home/reg_dato_psicologo']" > &nbsp; Registrate aqui</a></label>
+    <label class="registrar">¿No tienes cuenta?  <a [routerLink]="['/home/reg_dato_psicologo']" > &nbsp; Regístrate aquí</a></label>
     <button class="login-btn" (click)="login()">Ingresar</button>
   </div>
 </body>
