--- a/src/app/navbar/gest-op/gest-op.component.html
+++ b/src/app/navbar/gest-op/gest-op.component.html
@@ -54,7 +54,7 @@
             </div>
             <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                 <div class="formulario">
-                    <button type="button" id="add-btn"  class="btn btn-success" data-toggle="modal" data-target="#createropcmodal">Añadir Opcion<i class="fas fa-plus-square"></i></button>
+                    <button type="button" id="add-btn"  class="btn btn-success" data-toggle="modal" data-target="#createropcmodal">Añadir Opción<i class="fas fa-plus-square"></i></button>
                     <div class="form">
                         <div class="form-one">
                             <label>Opciones:</label>
