--- a/src/app/reportes/reporte_individual/reporte-i.component.css
+++ b/src/app/reportes/reporte_individual/reporte-i.component.css
@@ -7,7 +7,7 @@
 body{
     width: 100%;
     height: 100%;
-    padding-top: 50px;
+    padding-top: 40px;
     background-color: transparent;
     
 }
@@ -16,8 +16,8 @@ body{
     min-width: 93%;
     margin: 0 auto;
     display: grid;   
-    grid-template-columns: 500px 1fr 1fr;
-    grid-template-rows: 130px 1fr ;
+    grid-template-columns: 450px 1fr 1fr;
+    grid-template-rows: 145px 1fr ;
     gap: 15px;
     height: 95%;
 }
@@ -80,7 +80,7 @@ label{
 }
 
 .fechas button{
-   background-color: cadetblue;
+   background-color: #4caf50;
    color: white;
    border-radius: 5px;
    border:none;
@@ -93,9 +93,129 @@ label{
 .cont-rigth{
     background-color: white;
     border-radius: 4px;
-    padding: 10px;
+    padding: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     height: 100%;
     grid-column: 2/4;
     grid-row: 2;
 }
+.cont-rigth h6{
+    text-align: center;
+    font-weight: 600;
+    color: #4caf50;
+    font-size: 17px;
+    margin-bottom: 15px;
+}
+.cont-rigth .descrip{
+    padding: 5px 10px;
+    background: #4caf50;
+    color: whitesmoke;
+    border-radius: 5px;
+    border: none;
+}
+
+
+/**---------------------Modal de atenciones-------*/
+.result .paciente,.personal{
+
+    padding: 25px 0px 10px 0px;
+    border: 1px solid #f5ede6;
+    margin-bottom: 10px;
+      
+   }
+   .paciente  .cont-img,
+   .personal .cont-img{
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     position: relative;
+     align-items: center;
+   }
+   .paciente .data,
+   .personal .data{
+     width:100%;
+     margin-top: 25px;
+     height:auto;
+     display:flex;
+     flex-wrap:wrap;
+   }
+   
+
+   .info_style{
+     width:32%;
+     margin-right:10px;
+     display:flex;
+     height:80px;
+     flex-direction:column;
+     
+   }
+   .info_style label{
+    font-size: 12px;
+    font-weight: 400;
+    color: #9a9a9a;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+   }
+   .info_style input{
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    color: #565656;
+    font-size: 14px;
+    padding: 8px 12px;
+    height: 40px;
+    box-shadow: none;
+   }
+   .circle2{
+    color: white;
+    text-align: center;
+    max-width: 100px;
+    padding: 1px 15px;
+    border-radius: 4px;
+    font-size: 12.5px;
+    
+  }
+  .input-style2{
+      width: 47%;
+      height: 145px;
+flex-direction: column;
+margin-right: 20px;
+display: flex;
+  }
+  .input-style2 textarea,.info_style textarea{
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    color: #565656;
+    font-size: 14px;
+    padding: 8px 12px;
+    height: 100px;
+    box-shadow: none;
+  }
+  .input-style2 label{
+    font-size: 12px;
+    font-weight: 400;
+    color: #9a9a9a;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+  }
+
+
+
+ 
+  .nav-link.active{
+    background-color: #f5ede6;
+    color: black;
+  }
+  .nav-link{
+      color: #565656;
+      }
+  a{
+      color: black;
+  }
+  .nav-item{
+      flex-grow: 1;
+  }
+  .modal-lg{
+      max-width: 950px;
+  }
