--- a/src/app/reportes/reportes/reportes.component.css
+++ b/src/app/reportes/reportes/reportes.component.css
@@ -6,21 +6,196 @@
 body{
     width: 100%;
     height: 100%;
-
+    
     background-color: transparent;
     
 }
 
-h5{
-    font-size: 22px;
-    color: white;
-    background-color: hsl(41deg 94% 65%);
-    height: 60px;
-    display: flex;
+.content{
+    background: transparent;
+    width: 95%;
+    margin: 0 auto;
+    row-gap: 20px;
+    column-gap: 15px;
+    display: grid;
+    padding: 25px 10px 25px 10px;
+    grid-template-columns: 35% 35% 30%;
+    grid-template-rows: 300px auto;
+    height: auto;
+}
+/* generales */
+.flexr{
+  display: flex;
+  flex-direction: row;
+ 
+}
+.flexc{
+  display: flex;
+  flex-direction: column;
+}
+.fb{
+    font-weight: bold;
+}
+/* --------------- Reporte H-M -----------------*/
+.report_total{
+    grid-column: 1/3;
+}
+.report_total h6,.list-psi h6{
+    font-weight: bold;
+    font-size: 20px;
+}
+.m,.h{
+    position: relative;
+    background: white;
+    height: 100%;
+    width: 50%;
+    padding-left: 25px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+}
+.m .lab,.h .lab{
     position: absolute;
+    top: 20px;
+}
+
+.m .total,.h .total{
+    justify-content: center;
+    padding-left: 30px;
+    width: 30%;
+    margin: 0;
+}
+.total label:first-child{
+    font-size: 25px;
+    margin: 0;
+    font-weight: 500;
+}
+/**--------------------- Lista de estudiante          ----------------------*/
+.list-psi{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+padding: 15px 15px;
+width: 100%;
+position: relative;
+background: white;
+grid-column: 1/3;
+height: 100%;
+}
+.list-psi .selecttype{
+  margin-left: 0px;
+  font-size: 20px;
+  color: #4caf50;
+}
+.selecttype{
+    border: none;
+    outline: none;
+    font-size: 20px;
+    color: #6c6f71;
+    font-weight: bold;
+    background: transparent;
+    margin-left: 15px;
+    
+}
+.selecttype option{
+    font-size: 16px;
+}
+.tablaxd {
+    border-collapse: separate; 
+    font-size: 12.5px;
+    width: 100%;
+    border-spacing: 0px 7px; 
+}
+.tablaxd td{
+    background: white;
+    overflow: hidden;
+}
+.tablaxd th{
+    overflow: hidden;
+}
+.tablaxd thead{
+    color: #4caf50;
+    overflow: hidden;
+}
+.tablaxd .bodytable{
+    box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
+    border-radius: 5px;   
+    height: 50px;
+}
+.tablaxd td:nth-child(1){
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.tablaxd td:nth-child(2){
+   font-weight: bold;
+}
+.tablaxd td:nth-last-child(1){
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-left: 50px;
+}
+.tablaxd td:nth-last-child(2){
+    padding-left: 50px;
+}
+
+/**----------------------Reporte por alumno --------------**/
+.reports{
+    background-color: white;
+    width: 100%;
+    grid-column: 3/4;
+    grid-row: 1/3;
+    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
+    height: 95%;
     border-radius: 4px;
-    top: -75px;
-    left: 0;
+    margin-top: 30px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 5px;
+}
+.info-personal{
+    width: 45%;
+    height: 180px;
+    margin-right: 10px;
+    padding: 10px;
+    margin-bottom: 15px;
+    justify-content: space-around;
+    border-radius: 10px;
+    color: white;
+}
+.info-personal:nth-child(1){
+    background: linear-gradient(60deg,#ffa726,#fb8c00);
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(255 152 0 / 40%);    
+}
+.info-personal:nth-child(2){
+
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(76 175 80 / 40%);
+    background: linear-gradient(60deg,#66bb6a,#43a047);
+}
+.info-personal:nth-child(3){
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(244 67 54 / 40%);
+    background: linear-gradient(60deg,#ef5350,#e53935);
+
+
+}
+.info-personal:nth-child(4){
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(0 188 212 / 40%);
+    background: linear-gradient(60deg,#26c6da,#00acc1);
+
+}
+.icon{
+    font-size: 25px;
+    width: auto;
+    background-color: #ffffff;
+    
+    text-align: center;
+    padding: 11px 10px;
+    width: 30%;
+    border-radius: 50%;
+}
+.reports h6{
+    font-size: 20px;
+    color: white;
+    background-color: hsl(36deg 100% 50%);
+    height: 40px;
+    display: flex;
+    border-radius: 4px;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -55,101 +230,8 @@ h5{
   ::-webkit-calendar-picker-indicator{
     filter:opacity(0)
   }
-.content{
-    background: transparent;
-    width: 95%;
-    margin: 0 auto;
-    display: flex;
-        margin-top: 70px;
-    height: auto;
-}
-.list-psi{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-padding: 15px 15px;
-width: 70%;
-position: relative;
-background: white;
-height: 100%;
-}
-[type="search"]{
-    background: yellowgreen;
-}
-.selecttype{
-    border: none;outline: none;font-size: 22px;color: #6c6f71;font-weight: bold;background: transparent;margin-left: 15px;margin-top: -3px;
-}
-.selecttype option{
-    color: teal;
-    border: none;
-    font-size: 16px;
-}
-.selecttype option:hover{
-    color: white;
-    background: teal;
-}
-.tablaxd {
-    border-collapse: separate; 
-    font-size: 12.5px;
-    width: 100%;
-    border-spacing: 0px 7px; 
-   
-}
-.tablaxd td{
-    background: white;
-    overflow: hidden;
-  
-  
-}
-.tablaxd th{
-    
-    overflow: hidden;
-  
-  
-}
-.tablaxd thead{
-   
-    color: #13c298;
-    overflow: hidden;
-  
-  
-}
 
 
-.tablaxd .bodytable{
-    box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
-    border-radius: 5px;
-    
-    
-    height: 50px;
-}
-.tablaxd td:nth-child(1){
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-.tablaxd td:nth-child(2){
-   font-weight: bold;
-}
-.tablaxd td:nth-last-child(1){
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding-left: 50px;
-}
-
-.tablaxd td:nth-last-child(2){
-
-    padding-left: 50px;
-}
-
-.reports{
-    background-color: white;
-    margin-right: 15px;
-    width: 40%;
-    margin-top: 75px;
-    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
-    height: 100%;
-    border-radius: 4px;
-    position: sticky;
-    top: 140px;
-}
 
 
 .reports .search{
@@ -157,8 +239,8 @@ height: 100%;
     height: auto;
     align-items: center;
     display: flex;
-    padding-left: 80px;
-    padding-right: 100px;
+    padding-left: 30px;
+    padding-right: 30px;
     flex-direction: column;
 }
 .search .fechas{
